# BiblioteKA

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml
authors/: models.py  serializers.py  urls.py  views.py
authors/migrations/: 0001_initial.py  0002_alter_author_image.py
books/: models.py  permissions.py  serializers.py  urls.py  views.py
books/management/: author_A.json
books/management/commands/: create_books.py
books/migrations/: 0001_initial.py  0002_initial.py  0003_alter_book_image.py  0003_alter_book_series.py  0003_book_days_alter_bookloan_load_date_and_more.py  0003_bookloan_returned.py  0004_copy_is_avaliable_alter_book_days.py
core/: constrains.py  settings.py  urls.py
core/jobs/: schedule1.py
tests/models/: common.py
tests/models/authors/: test.py
tests/models/book_loans/: test.py
tests/models/books/: test.py
tests/models/users/: test.py
users/: avatar.py  email_template.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
users/assets/: avatar.py
users/email/: email_message.html  email_message.txt
users/management/commands/: create_admin.py  create_users.py
users/migrations/: 0001_initial.py  0002_alter_user_is_superuser.py  0002_user_img.py  0002_user_is_colaborator_user_is_student_and_more.py  0002_user_is_suspended.py  0003_remove_user_img_user_image.py  0004_alter_user_image.py  0005_alter_user_image.py
